# ToneForgev2

./: .gitignore  AI_ENGINE_TEST_RESULTS.md  CRITICAL_FIXES_SUMMARY.md  MULTI_MODE_CONVERSATIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TONE_RESEARCH_AI.md  TWO_TIER_AI_SYSTEM.md  __show_readme.py  build.bat  setup.bat  tone_encyclopedia.json
docs/: API_DOCUMENTATION.md  ONLINE_GEMINI_2_5_PRO_RUN.md  SETUP.md  TOP_LEVEL_CHAIN_MAPPER.md
mapper-tests/: Cargo.toml
mapper-tests/scripts/: mock_reaper.py
mapper-tests/src/: lib.rs
mapper-tests/tests/: quality.rs
presets/: metallica-master.RPP
reaper-extension/: CMakeLists.txt  README.md
reaper-extension/src/: reaper_toneforge.cpp
tauri-app/: package-lock.json  package.json
tauri-app/src/: App.css  App.tsx  types.ts
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: act_mode.rs  ai_chain_orchestrator.rs  ai_client.rs  ai_engine.rs  ai_engine_tests.rs  chain_mapper.rs  conversation.rs  errors.rs  gemini_client.rs  grok_client.rs  lib.rs  parameter_ai.rs  planner_mode.rs  reaper_client.rs  researcher_mode.rs  secure_storage.rs  tone_ai.rs  tone_encyclopedia.rs  tone_researcher.rs  tone_sanitizer.rs  undo_redo.rs  xai_client.rs
tauri-app/src-tauri/src/audio/: matcher.rs  profile.rs
tauri-app/src/components/: AILayerStatus.css  AILayerStatus.tsx  ChangesTable.css  ChangesTable.tsx  FxSearch.css  FxSearch.tsx  LiveRunMonitor.css  LiveRunMonitor.tsx  RecentTones.css  RecentTones.tsx  Skeleton.css  Skeleton.tsx  ThemeToggle.css  ThemeToggle.tsx  Toast.css  Toast.tsx  Tooltip.css  Tooltip.tsx  TypingIndicator.css  TypingIndicator.tsx  UndoRedo.css  UndoRedo.tsx
tauri-app/src/eq-match/: EqMatchView.tsx  eq-match.css  types.ts
tauri-app/src/eq-match/components/: ControlPanel.tsx  EQVisualization.tsx  ExportPanel.tsx  FileUploader.tsx  FrequencyAnalyzer.tsx
tauri-app/src/hooks/: index.ts  useKeyboardShortcuts.ts  useNotificationSound.ts
toneforge-core/: Cargo.toml
toneforge-core/src/: lib.rs  undo_redo.rs
