[package]
name = "toneforge-mapper-tests"
version = "0.1.0"
edition = "2021"

# This crate exists to test `tauri-app/src-tauri/src/chain_mapper.rs` without
# pulling Tauri/GTK system dependencies.

[dependencies]
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
